kubernetes/networking/adguard/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
