kubernetes/networking/adguard/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: adguard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: adguard
          port: 3000
  tls: {}
